retail-media/v2024.10/docs/create-your-app.mdx
---
title: "Create Your API Application"
---

1. Getting Started
2. [Configure Your API Application](/retail-media/v2024.10/docs/configuring-your-api-application)

# Create your API application

Once you have [created your organization](https://developers.criteo.com/retail-media/docs/create-your-organization), you can access the `My Apps` page to begin creating your application. This page is also where you will manage your Criteo API applications.

To start creating your API application, click the `Create a New App` button in the top right corner of the page. This will initiate the application creation process.

***

## Step 1 - Create application

### App details

* Provide a name for your application, along with an optional description and app image.
  * **Note:** API applications cannot be deleted. Once this step is completed, your application will appear in the "My Apps" dashboard.

### Authentication method

* Criteo’s API supports two OAuth authentication methods: [Client Credentials](https://developers.criteo.com/retail-media/docs/oauth-app-client-credentials) and [Authorization Code](https://developers.criteo.com/retail-media/docs/oauth-app-authorization-code). Each method has its own advantages, so before proceeding, we strongly recommend reviewing which authentication method is best suited to your application’s needs.

![](/images/retail-media/v2024.10/docs/2ce3350-auth_methods2.png)

<Info>
  ### Trying to decide which OAuth method is right for you?

  If you're unsure which authentication method to use, take a look at our [OAuth App Implementation](https://developers.criteo.com/retail-media/docs/oauth-app-implementation) guide for an overview of each authentication method.
</Info>

***

## Step 2 - App activation

Once you've selected the appropriate authentication method, proceed to choose the service you’ll be using.

### Services

* Choose the Criteo service your API application will interact with:

  * **C-Growth** for marketing solutions,
  * **C-Max** for retail media.

![](/images/retail-media/v2024.10/docs/6c1fa6d-portal-_step3_1.gif)

***

## Step 3 - Authorizations

### Domains

1. Choose the domains that define the permission levels your application will need. These domains determine which endpoints your application can access.

2. After selecting the appropriate domains, click `Activate App`.

<Warning>
  Once activated, you won’t be able to change the name, description, image, or app scope.
</Warning>

### Retail Media Domains

| Analytics                                                                                                                                                                                                                  | Audiences                                                                                                                                                                                                                                                                                                                                 | Campaigns                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| * **No access**\_ - Your application will not have access to any retail media analytics endpoints.
* ***Read*** - Your application will have access to retrieve reporting data using the retail media analytics endpoints. | - **No access**\_ - Your application will not have access to any retail media audience endpoints.
- **Read**\_- Your application will be able to retrieve audiences and make calls to `GET` endpoints only.
- ***Manage*** - Your application will have full access to all audience endpoints, including both `GET` and `POST` endpoints. | * ***No access*** - Your application will not have access to any retail media campaign management endpoints. This includes all features for managing campaigns, line items, balances, catalogs, and creatives.

* ***Read*** - Your application can only retrieve campaign management details. This includes access to `GET` endpoints only.

* ***Manage*** - Your application will have full access to all campaign management endpoints, including both `GET` and `POST` endpoints. |

Once you activate your application, you will be redirected to your application details page to complete the final steps of your application configuration.

***

What’s Next

* [Get Your Credentials](/retail-media/v2024.10/docs/get-credentials)
* [API Authorization](/retail-media/v2024.10/docs/api-authorization)
* [OAuth App Implementation](/retail-media/v2024.10/docs/oauth-app-implementation)
* [Developer Accounts](/retail-media/v2024.10/docs/developer-accounts-organizations-apps)
